syntax = "proto3";

package listener;

service EventListenerService {
  rpc StartListener (StartListenerDto) returns (ListenerResponse);
  rpc StopListener(StopListenerDto) returns (ListenerResponse);
}

message StartListenerDto {
  string chainId = 1;
  repeated string eventNames = 2;
  string contractAddress = 3;
  int32 startBlock = 4;
  int32 batchSize = 5;
  string abi = 6;
  string rpc = 7;
}

message StopListenerDto {
  string contractAddress = 1;
  string chainId = 2;
}

message ListenerResponse {
  bool success = 1;
  string message = 2;
}